--- a/package.json
+++ b/package.json
@@ -15,24 +15,23 @@
   "scripts": {
     "clean": "cross-env ./node_modules/.bin/rimraf dist",
     "build": "cross-env npm run clean && npm run build:server && npm run build:admin",
-    "build:server": "cross-env npm run clean && tsc -p tsconfig.server.json cross-env npm run clean && npm run build:server",
+    "build:server": "cross-env npm run clean && tsc -p tsconfig.server.json",
     "build:admin": "cross-env medusa-admin build",
     "watch": "cross-env tsc --watch",
     "test": "cross-env jest",
     "seed": "cross-env medusa seed -f ./data/seed.json",
     "start": "cross-env npm run build && medusa start",
     "start:custom": "cross-env npm run build && node --preserve-symlinks --trace-warnings index.js",
-    "dev": "cross-env npm run build:server && medusa develop",
-    "dev:admin": "medusa-admin develop"
+    "dev": "cross-env npm run build:server && medusa develop"
   },
   "dependencies": {
-    "@medusajs/admin": "^7.1.10",
+    "@medusajs/admin": "7.1.10",
     "@medusajs/cache-inmemory": "^1.8.9",
-    "@medusajs/cache-redis": "^1.9.0",
+    "@medusajs/cache-redis": "^1.8.9",
     "@medusajs/event-bus-local": "^1.9.7",
     "@medusajs/event-bus-redis": "^1.8.10",
-    "@medusajs/file-local": "^1.0.2",
-    "@medusajs/medusa": "1.20.0",
+    "@medusajs/file-local": "^1.0.3",
+    "@medusajs/medusa": "1.20.1",
     "@tanstack/react-query": "4.22.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
