--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "medusa-starter-default",
-  "version": "0.0.1",
-  "description": "A starter for Medusa projects.",
-  "author": "Medusa (https://medusajs.com)",
+  "name": "octopus-starter-default",
+  "version": "0.0.8",
+  "description": "A octopus project",
+  "author": "halo",
   "license": "MIT",
   "keywords": [
     "sqlite",
