--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "octopus",
   "version": "0.0.8",
   "description": "A starter .",
-  "author": "halo",
+  "author": "haloweave.com",
   "license": "MIT",
   "keywords": [
     "sqlite",
