--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clean": "cross-env ./node_modules/.bin/rimraf dist",
     "build": "cross-env npm run clean && npm run build:server",
     "build:server": "cross-env npm run clean && tsc -p tsconfig.server.json",
-    "build:admin": "cross-env medusa-admin build --deployment",
+   
     "watch": "cross-env tsc --watch",
     "test": "cross-env jest",
     "seed": "cross-env medusa seed -f ./data/seed.json",
@@ -25,13 +25,12 @@
     "dev": "cross-env npm run build:server && medusa develop"
   },
   "dependencies": {
-    "@medusajs/admin": "7.1.10",
     "@medusajs/cache-inmemory": "^1.8.9",
     "@medusajs/cache-redis": "^1.8.9",
-    "@medusajs/event-bus-local": "^1.9.7",
-    "@medusajs/event-bus-redis": "^1.8.10",
+    "@medusajs/event-bus-local": "^1.9.8",
+    "@medusajs/event-bus-redis": "^1.8.11",
     "@medusajs/file-local": "^1.0.3",
-    "@medusajs/medusa": "1.20.1",
+    "@medusajs/medusa": "1.20.2",
     "@tanstack/react-query": "4.22.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -45,6 +44,7 @@
     "typeorm": "^0.3.16"
   },
   "devDependencies": {
+    "@medusajs/admin": "7.1.11",
     "@babel/cli": "^7.14.3",
     "@babel/core": "^7.14.3",
     "@babel/preset-typescript": "^7.21.4",
@@ -86,5 +86,13 @@
     ],
     "coverageDirectory": "./coverage",
     "testEnvironment": "node"
+  },
+  "overrides": {
+    "@medusajs/admin-ui": {
+      "@medusajs/ui-preset": "^1.1.2"
+    }
+  },
+  "resolutions": {
+    "@medusajs/ui-preset": "^1.1.2"
   }
 }
