--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "octopus",
+  "name": "medusa",
   "version": "0.1.9",
   "description": "A starter .",
-  "author": "Haloweave (https://haloweave.com)",
+  "author": "Medusa (https://medusajs.com)",
   "license": "MIT",
   "keywords": [
     "sqlite",
@@ -20,7 +20,7 @@
     "watch": "cross-env tsc --watch",
     "test": "cross-env jest",
     "seed": "cross-env medusa seed -f ./data/seed.json",
-    "start": "cross-env npm run build && medusa migrations run && medusa start",
+    "start": "cross-env medusa migrations run && medusa start",
     "start:custom": "cross-env npm run build && node --preserve-symlinks --trace-warnings index.js",
     "dev": "cross-env npm run build:server && medusa develop"
   },
